Split controllers, routes & views. Added a controller so routes just define routes. Added test coverage

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha",
+    "test": "nyc mocha",
     "start": "node server.js"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "chai": "^4.1.2",
     "express": "^4.16.1",
     "mocha": "^3.5.3",
+    "nyc": "^11.2.1",
     "path": "^0.12.7",
     "pug": "^2.0.0-rc.4",
     "zombie": "^5.0.7"
